--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "btca",
+  "name": "@btca/repo",
   "author": "Ben Davis",
   "version": "0.1.1",
   "description": "CLI tool for asking questions about technologies using OpenCode",
-  "type": "module",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/bmdavis419/better-context"
   },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "keywords": [
     "cli",
     "ai",
@@ -17,37 +20,19 @@
   "engines": {
     "bun": ">=1.1.0"
   },
-  "bin": {
-    "btca": "./bin.js"
-  },
-  "files": [
-    "bin.js",
-    "dist"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "packageManager": "bun@1.3.3",
   "scripts": {
-    "dev": "bun run src",
-    "build": "bun build src/index.ts --outdir dist --target bun",
-    "build:targets": "bun run scripts/build-binaries.ts",
-    "build:artifacts": "bun run build && bun run build:targets",
-    "prepublishOnly": "bun run build:artifacts",
-    "start": "bun dist/index.js",
-    "typecheck": "tsc --noEmit",
-    "prepare": "effect-language-service patch"
+    "dev": "turbo run dev",
+    "cli": "bun run apps/cli/src/index.ts",
+    "cli:ask": "bun run apps/cli/src/index.ts ask",
+    "cli:serve": "bun run apps/cli/src/index.ts serve",
+    "cli:open": "bun run apps/cli/src/index.ts open",
+    "build": "turbo run build",
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
-    "@effect/cli": "^0.72.1",
-    "@effect/language-service": "^0.57.1",
-    "@effect/platform": "^0.93.5",
-    "@effect/platform-bun": "^0.85.0",
-    "@effect/printer": "^0.47.0",
-    "@effect/printer-ansi": "^0.47.0",
-    "@effect/typeclass": "^0.38.0",
-    "@opencode-ai/sdk": "^1.0.119",
     "@types/bun": "latest",
-    "effect": "^3.19.8",
+    "turbo": "^2.6.1",
     "typescript": "^5.9.3"
   }
 }
